--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,10 @@
-title: John Doe # your name (or website title) here
-logo: "/images/logo.png?raw=true" # your photo (or logo) here
+title: Bingchu Chen
+logo: "/images/profile.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  Master of City Planning/Master of Urban Spatial Analytics candidate
   <br><br>
-  Second description 
+  Transportation concentration
   <br><br>
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
-  
+  <a href="www.linkedin.com/in/bingchu-chen">View My LinkedIn Profile</a>
+
 theme: jekyll-theme-minimal
-google_analytics: UA-000000-0 # your Google Analytics tracking ID here
