--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,6 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br><br>
   Transportation concentration
   <br><br>
-  <a href="www.linkedin.com/in/bingchu-chen">View My LinkedIn Profile</a>
+  <a href="https://www.linkedin.com/in/bingchu-chen">View My LinkedIn Profile</a>
 
 theme: jekyll-theme-minimal
-            
