--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Bingchu Chen
 logo: "/images/profile.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Master of City Planning/Master of Urban Spatial Analytics candidate
+  Master of City Planning/Master of Urban Spatial Analytics candidate, 2022
   <br><br>
   Transportation concentration
   <br><br>
