--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ logo: "/images/profile.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Master of City Planning/Master of Urban Spatial Analytics candidate, 2022
   <br><br>
-  Transportation concentration
+  Sustainable Transportation and Infrastructure Planning (STIP) concentration
   <br><br>
   <a href="https://www.linkedin.com/in/bingchu-chen">View My LinkedIn Profile</a>
 
